@@ -1,3 +1,10 @@
+2008-10-19  Gabor Csardi  <csardi@szaffi>
+
+	* interface/R/src/rinterface.c.in (R_igraph_attribute_delete_vertices)
+	(R_igraph_attribute_delete_edges) : removed
+	(R_igraph_attribute_permute_vertices)
+	(R_igraph_attribute_permute_edges): added
+
 2008-09-29  Gabor Csardi  <csardi@szaffi>
 
 	* interfaces/R/igraph/R/structural.properties.R (graph.laplacian)
